# adacpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  action_config.toml  env.bat  environment.build.yml  pixi.toml  pyproject.toml
.forgejo/workflows/: conda-prerelease.yaml
.github/workflows/: basic_test.yaml  build-stp2glb.yaml  ci-build.yaml  ci-test.yaml  ci-tests.yaml  ci-wasm-tests.yaml  manual-dispatch-release.yaml  pr-review.yaml  pr-tests.yaml  pre-release-dispatch.yaml  publish-occt-wasm-base.yaml  publish-wasm-base.yaml
cmake/: build_python.cmake  build_stp2glb.cmake  deps_detria.cmake  deps_gmsh.cmake  deps_ifc.cmake  deps_libtess2.cmake  deps_manifold.cmake  deps_meshopt.cmake  deps_occ.cmake  nanobind.cmake  pre_checks.cmake  wasm_build.cmake  wasm_occt.cmake  wasm_toolchain.cmake
conda/: bld.bat  build.bat  build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml  stub_gen.py
deploy/: Dockerfile.occt-wasm-base  Dockerfile.wasm-base
src/: adacpp.cpp  adacpp_py_wrap.cpp  binding_core.h  main.cpp  wasm_utils.cpp  wasm_utils.h
src/adacpp/: __init__.py  fem.py  geom.py  utils.py  visit.py
src/adacpp/cad/: __init__.py
src/adacpp/cadit/: __init__.py  conversion.py  ifc.py  occt.py
src/cad/: ShapeHandle.h  brep_file_convert.h  brep_writer_wasm.cpp  cad_py_wrap.cpp  cad_py_wrap.h  cad_wasm.cpp  effective_concurrency.h  glb_diff_wasm.cpp  ifc_emit.h  ifc_glb_wasm.cpp  ifc_reader.h  ifc_to_glb_stream.h  mem_trim.h  mem_tune.h  posix_compat.h  step_emit.h  step_to_glb_st.h  step_to_glb_stream.h  step_to_mesh_stream.h
src/cadit/ifc/: ifc_py_wrap.cpp  ifc_py_wrap.h  ifcop.cpp  ifcop.h  ngeom_taxonomy.h  ngeom_taxonomy_build.cpp  ngeom_taxonomy_kernel.cpp
src/cadit/occt/: colors.cpp  colors.h  custom_progress.cpp  occt_py_wrap.cpp  occt_py_wrap.h  static_param_guard.h  step_to_glb.cpp  step_to_glb.h  step_writer.cpp  step_writer.h
src/cadit/step/: step_part21.h  step_reader.h
src/cadit/tinygltf/: tiny.cpp  tiny_helpers.cpp  tiny_helpers.h  tiny_py_wrap.cpp  tiny_py_wrap.h
src/diff/: glb_diff.h  glb_diff_native.h
src/exchange/: gltf_writer.cpp  step_writer.cpp  step_writer.h  tiny.cpp  tiny.h
src/exchange/occt/: colors.cpp  gltf_writer.cpp
src/exchange/tinygltf/: tiny.cpp  tiny.h
src/fem/: fem_py_wrap.cpp  fem_py_wrap.h  simple_mesh.cpp  simple_mesh.h
src/fem/solver/: FEMSolver2d.cpp  FEMSolver2d.h
src/frontend/: nginx.conf
src/frontend/public/: index.html
src/geom/: Color.cpp  Color.h  GroupReference.h  Mesh.h  MeshType.h  Models.cpp  OccShape.h  geom_py_wrap.cpp  geom_py_wrap.h  geometries.cpp  geometries.h  mesh_spike.h  tess_helpers.cpp  tess_helpers.h
src/geom/neutral/: ada_ext_schema.h  ngeom_boolean.cpp  ngeom_boolean.h  ngeom_bspline.h  ngeom_curves.h  ngeom_decode.h  ngeom_encode.h  ngeom_glb.h  ngeom_math.h  ngeom_meshopt.cpp  ngeom_meshopt.h  ngeom_profile.h  ngeom_solidify.h  ngeom_surfaces.h  ngeom_sweep.h  ngeom_tess_track.h  ngeom_tessellate.cpp  ngeom_tessellate.h  ngeom_topology.h  ngeom_weld.h
src/helpers/: helpers.cpp  helpers.h
src/models/: Mesh.h  geometries.cpp
src/stp2glb/: config_structs.h  config_utils.cpp  config_utils.h  main.cpp
src/stp2glb/core/: convert.cpp  convert.h  debug.cpp  debug.h  geometry_iterator.h  helpers.cpp  helpers.h  step_helpers.cpp  step_helpers.h  step_tree.cpp  step_tree.h  step_writer.cpp  step_writer.h
src/tessellation/: TessellateFactory.cpp  TessellateFactory.h  tess_helpers.cpp  tess_helpers.h
src/tessellation/manual/solids/: boxes.cpp
src/tessellation/solids/: boxes.cpp
src/visit/: ShapeTesselator.cpp  ShapeTesselator.h  TessellateFactory.cpp  TessellateFactory.h  tess_helpers.cpp  tess_helpers.h  tess_py_wrap.cpp  tess_py_wrap.h  visit_py_wrap.cpp  visit_py_wrap.h
src/visit/manual/solids/: boxes.cpp
tests/: .gitignore
tests/cpp/: CMakeLists.txt  gtest_mesh.cpp  stp2glb_tests.cmake  test1.cmake  test1.cpp  tests.cmake
tests/ngeom/: run.sh  test_analytic.cpp  test_bspline.cpp  test_decode.cpp  test_ngeom_glb.cpp  test_solidify_manifold.cpp  test_tessellate.cpp  test_weld.cpp
tests/ngeom/fixtures/: face_elev13plate1.ngeom  face_elev14plate7.ngeom
tests/py/: conftest.py  test_ada_integration.py  test_basic.py  test_cad_api_generated.py  test_mesh_spike.py  test_ngeom_blob_emit.py  test_ngeom_mesh_emit.py  test_planar_face_holes.py  test_step_mapped_instances.py
tests/step/: test_step_part21.cpp  test_step_reader.cpp
tools/: build_wheel.py  gen_cad_api.py  package.json  test_glb_diff_wasm.mjs  test_shape_handle_wasm.js  test_step_glb_wasm.mjs  test_wheel_pyodide.js
wasm-types/: README.md  THIRD_PARTY_LICENSES.txt
