[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-cpp"
version = "0.2.1"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A minimal python wrapping of OCCT using nanobind"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krande/adacpp"
"Bug Tracker" = "https://github.com/Krande/adacpp/issues"

[tool.setuptools]
packages = ["adacpp"]

[tool.setuptools.package-dir]
adacpp = "src/adacpp"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.isort]
profile = "black"
skip = [".pixi", "node_modules", "temp"]
skip_glob = ["**/node_modules/**", "**/temp/**"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.environments]
lint = { features = ["lint"], no-default-feature = true }
common = { features = ["common"], no-default-feature = true }
wasm = { features = ["wasm", "common"], no-default-feature = true }
conda = { features = ["conda"], no-default-feature = true }
test = { features = ["test", "common"], no-default-feature = true }

[tool.pixi.feature.conda.dependencies]
rattler-build = "*"

[tool.pixi.feature.common.dependencies]
python = "==3.12"
occt = { version = "==7.9.0", build = "*novtk*" }
ifcopenshell = ">=0.8.3"
nanobind = "==2.1.0"
cmake = "==3.30.3"
numpy = "*"
cgal-cpp = "==6.0.1"
cli11 = "*"
tinygltf = "==2.8.21" # This must be installed in target dir also if you want to compile
gmsh = "*"
ninja = "*"
cxx-compiler = "*"

[tool.pixi.feature.common.target.linux-64.dependencies]
gxx="*"
mesa-libgl-devel-cos7-x86_64="*"
libxext-conda-x86_64="*"

[tool.pixi.feature.test.dependencies]
pytest = "==8.3.2"
ada-py = "*"
pip = "*"

[tool.pixi.feature.lint.dependencies]
black = "==24.4.2"
isort = "==5.13.2"
ruff = "==0.4.10"

[tool.pixi.feature.wasm.dependencies]
nodejs = "*"
ninja = "*"
emscripten = "*"

[tool.pixi.feature.lint.tasks]
lint = "isort . && black . --config pyproject.toml && ruff check . --fix"

[tool.pixi.feature.wasm.tasks]
clean = { cmd = "rm -rf build-wasm && mkdir -p build-wasm" }
wbuild = { cmd = "emcmake cmake . -B build-wasm -G Ninja -DBUILD_WASM=ON -DBUILD_PYTHON=OFF -DBUILD_TESTS=OFF -DBUILD_STP2GLB=OFF && cmake --build build-wasm", depends-on = ["clean"] }

[tool.pixi.feature.conda.tasks]
conda-build = { cmd = "rattler-build build -r conda/recipe.yaml --experimental", description = "Build the conda package" }

[tool.pixi.feature.test.tasks]
install = { cmd = "cmake -B build -S . -G Ninja -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON -DBUILD_STP2GLB=ON -DBUILD_WASM=OFF -DTINY_INCLUDE_DIR=$CONDA_PREFIX/include -DPYTHON_SITE_PACKAGES=$SP_DIR && cmake --build build; cmake --install build", description = "Build and install with CMake" }
test = { cmd = "pytest tests/py", description = "Run the tests" }
echo = { cmd = "echo \"$CONDA_PREFIX\"", description = "Echo Hello World" }
echo2 = { cmd = "echo \"$SP_DIR\"", description = "Echo Hello World" }

[tool.pixi.feature.test.target.win-64.tasks]
stp2glb = { cmd = "STP2GLB.exe", description = "Run the C++ tests" }

[tool.pixi.feature.test.target.linux-64.tasks]
stp2glb = { cmd = "STP2GLB", description = "Run the C++ tests" }

[tool.pixi.feature.test.target.win-64.activation.env]
STP2GLB_EXE_DIR = "%CONDA_PREFIX%/Library/bin"
SP_DIR = "%CONDA_PREFIX%/Lib/site-packages"

[tool.pixi.feature.test.target.linux-64.activation.env]
STP2GLB_EXE_DIR = "$CONDA_PREFIX/bin"
SP_DIR = "$CONDA_PREFIX/lib/python3.12/site-packages"
#CMAKE_PREFIX_PATH = "$CONDA_PREFIX:$CONDA_PREFIX/include:$CONDA_PREFIX/lib:$CONDA_PREFIX/bin"