[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-cpp"
version = "0.9.0"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A minimal python wrapping of OCCT using nanobind"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krande/adacpp"
"Bug Tracker" = "https://github.com/Krande/adacpp/issues"









[tool.setuptools]
packages = ["adacpp"]

[tool.setuptools.package-dir]
adacpp = "src/adacpp"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/", "node_modules/", "output/"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.isort]
profile = "black"
skip = [".pixi", "node_modules", "temp", "output"]
skip_glob = ["**/node_modules/**", "**/temp/**", "**/output/**"]