[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-cpp"
version = "0.13.2"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A minimal python wrapping of OCCT using nanobind"
readme = "README.md"
requires-python = ">=3.10"
# numpy is NOT optional: the mesh/stream API hands back zero-copy nb::ndarray<nb::numpy, ...> views
# (Mesh.positions, Mesh.indices, the NGEOM stream buffers), so touching any result imports numpy.
# Leaving it undeclared was invisible natively — conda always has numpy — but under pyodide micropip
# installs exactly what is declared, and reading Mesh.indices without numpy does NOT raise
# ImportError: it recurses until the interpreter dies with "Maximum call stack size exceeded".
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krande/adacpp"
"Bug Tracker" = "https://github.com/Krande/adacpp/issues"
















[tool.setuptools]
packages = ["adacpp"]

[tool.setuptools.package-dir]
adacpp = "src/adacpp"

[tool.black]
line-length = 120
# build/ holds CMake FetchContent deps (manifold, etc.) and third_party/ is vendored;
# black already skips build/ via its default exclude, force-exclude keeps third_party out too.
force-exclude = "(^|/)(build|third_party)/"

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/", "node_modules/", "output/", "build/", "third_party/"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.isort]
profile = "black"
skip = [".pixi", "node_modules", "temp", "output", "build", "third_party"]
skip_glob = ["**/node_modules/**", "**/temp/**", "**/output/**", "**/build/**", "**/third_party/**"]